tests/jsx_pragma/simple_id_better_error_loc.js
// @jsx Foo
var Bar = 123;
<Bar />; // error
